opam-version: "2.0"
name:         "spamacus"
maintainer:   "Carine Morel <carine@tarides.com>"
authors:      "Carine Morel <carine@tarides.com>"
homepage:     "https://github.com/lyrm/spamacus"
bug-reports:  "https://github.com/lyrm/spamacus/issues"
dev-repo:     "git+https://github.com/lyrm/spamacus.git"
license:      "MIT"
synopsis:     "Spam filter in OCaml"
description: """Naive bayesian spam filter implementation."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml"      {>= "4.08.0"}
  "dune"       {>= "2.0.0"}
  "spamacus"       {= version}
]
