opam-version: "2.0"
name:         "spaml"
maintainer:   "Carine Morel <carine@tarides.com>"
authors:      "Carine Morel <carine@tarides.com>"
homepage:     "https://github.com/lyrm/spaml"
bug-reports:  "https://github.com/lyrm/spaml/issues"
dev-repo:     "git+https://github.com/lyrm/spaml.git"
license:      "MIT"
synopsis:     "Spam filter abstraction in OCaml"
description: """Spaml filter with a personnalized features vector as input."""

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"      {>= "4.08.0"}
  "dune"       {>= "2.0.0"}
  "mrmime"     {>= "0.5.0"}
  "fmt"        {with-test}
  "logs"       {with-test}
]
