opam-version: "2.0"
name:         "spamtacus-bayesian"
maintainer:   "Carine Morel <carine@tarides.com>"
authors:      "Carine Morel <carine@tarides.com>"
homepage:     "https://github.com/mirage/spamtacus"
bug-reports:  "https://github.com/mirage/spamtacus/issues"
dev-repo:     "git+https://github.com/mirage/spamtacus.git"
license:      "MIT"
synopsis:     "Spam filter in OCaml"
description: """Naive bayesian spam filter implementation."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml"      {>= "4.08.0"}
  "dune"       {>= "2.0.0"}
  "lwt"        {>= "5.5.0"}
  "fpath"      {>= "0.7.3"}
  "spamtacus"  {= version}
]
