opam-version: "2.0"
name:         "spamtacus"
maintainer:   "Carine Morel <carine@tarides.com>"
authors:      "Carine Morel <carine@tarides.com>"
homepage:     "https://github.com/mirage/spamtacus"
bug-reports:  "https://github.com/mirage/spamtacus/issues"
dev-repo:     "git+https://github.com/mirage/spamtacus.git"
license:      "MIT"
synopsis:     "Spam filter abstraction in OCaml"
description: """Spam filter with a personnalizable features vector."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml"      {>= "4.08.0"}
  "dune"       {>= "2.0.0"}
  "mrmime"     {>= "0.5.0"}
  "lwt"        {>= "5.5.0"}
  "fpath"      {>= "0.7.3"}
  "cmdliner"   {>= "1.1.0"}
  "fmt"        {with-test}
  "logs"       {with-test}
]

pin-depends: [
  [ "mrmime.dev" "git+https://github.com/mirage/mrmime.git#722eac6d6579c2f537ac7ac4b14684767f648171" ]
]
